# user-search-backend

./: .gitignore  README.md  app.py  pyproject.toml
api/: routes.py
api/v1/: accounts.py
src/db/: queries.py
src/db/migrations/: 001_create_accounts_schema.sql
src/models/: account.py  service_consumer.py  service_provider.py
src/utils/: logger.py
tests/: test_service_consumer.py  test_service_provider.py
tests/integration_tests/: test_accounts_bp.py
user-search-backend/: app.py  pyproject.toml
user-search-backend/api/v1/: README.md  accounts.py
user-search-backend/src/db/: connection.py  queries.py  run_migration.py
user-search-backend/src/models/: __init__.py
user-search-backend/tests/unit_tests/: test_accounts.py
user-search-frontend/: README.md  package-lock.json  package.json
user-search-frontend/src/: App.css  App.js
